--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- Title & Description -->
+    <title>NGlobal Properties - Thriving for Excellence</title>
+    <meta
+      name="description"
+      content="NGlobal Properties helps you find your dream homes, lands, and investments with trust, excellence, and value-driven service."
+    />
+    <meta
+      name="keywords"
+      content="real estate, properties, homes, lands, NGlobal, Nigeria"
+    />
+    <meta name="author" content="NGlobal Properties" />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="NGlobal Properties - Thriving for Excellence"
+    />
+    <meta
+      property="og:description"
+      content="Discover premium properties, homes, and lands with NGlobal Properties. Thriving for excellence in real estate services."
+    />
+    <meta property="og:image" content="/logi-1.jpeg" />
+    <meta property="og:url" content="https://nglobalproperties.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="NGlobal Properties - Thriving for Excellence"
+    />
+    <meta
+      name="twitter:description"
+      content="Your trusted partner in real estate — find your dream homes, lands, and investments."
+    />
+    <meta name="twitter:image" content="/logo-1.jpeg" />
+
+    <!-- Theme color for mobile -->
+    <meta name="theme-color" content="#4B0082" />
   </head>
   <body>
     <div id="root"></div>
