--- a/index.html
+++ b/index.html
@@ -9,28 +9,23 @@
     <title>NGlobal Properties - Thriving for Excellence</title>
     <meta
       name="description"
-      content="NGlobal Properties helps you find your dream homes, lands, and investments with trust, excellence, and value-driven service."
+      content="Making real estate simple, secure, and accessible. From trusted lands and beautiful homes to serviced shortlets, NGlobal Properties helps you find lasting value."
     />
-    <meta
-      name="keywords"
-      content="real estate, properties, homes, lands, NGlobal, Nigeria"
-    />
-    <meta name="author" content="NGlobal Properties" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Social Sharing -->
     <meta
       property="og:title"
       content="NGlobal Properties - Thriving for Excellence"
     />
     <meta
       property="og:description"
-      content="Discover premium properties, homes, and lands with NGlobal Properties. Thriving for excellence in real estate services."
+      content="Making real estate simple, secure, and accessible. From trusted lands and beautiful homes to serviced shortlets, NGlobal Properties helps you find lasting value."
     />
-    <meta property="og:image" content="/logi-1.jpeg" />
-    <meta property="og:url" content="https://nglobalproperties.com" />
+    <meta property="og:image" content="https://yourdomain.com/images/01.png" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com" />
 
-    <!-- Twitter -->
+    <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -38,12 +33,9 @@
     />
     <meta
       name="twitter:description"
-      content="Your trusted partner in real estate — find your dream homes, lands, and investments."
+      content="Making real estate simple, secure, and accessible. From trusted lands and beautiful homes to serviced shortlets, NGlobal Properties helps you find lasting value."
     />
-    <meta name="twitter:image" content="/logo-1.jpeg" />
-
-    <!-- Theme color for mobile -->
-    <meta name="theme-color" content="#4B0082" />
+    <meta name="twitter:image" content="https://yourdomain.com/images/01.png" />
   </head>
   <body>
     <div id="root"></div>
